# jamknife

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  PLAYLIST_FEATURES.md  README.md  docker-compose.yml  pyproject.toml  report.xml
.github/workflows/: docker-build.yml
docs/: MIGRATION_SYSTEM.md  PLAYLIST_SCHEDULING.md
scripts/: CONNECTION_ERROR_HANDLING.md  test_listenbrainz_connection.py  validate_templates.py
src/jamknife/: __init__.py  __main__.py  config.py  database.py  migrations.py
src/jamknife/clients/: __init__.py  listenbrainz.py  plex.py  ytmusic.py  yubal.py
src/jamknife/services/: __init__.py  sync.py
src/jamknife/web/: __init__.py  app.py
src/jamknife/web/templates/: base.html  downloads.html  index.html  playlist_detail.html  playlists.html  sync_job_detail.html
tests/: test_clients.py  test_config.py  test_database.py  test_migrations.py  test_validate_templates.py  test_web_app.py
